--- a/src/style.css
+++ b/src/style.css
@@ -9,28 +9,29 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
     align-content: center;
 }
 
 #toggle {
-    height: 300px;
+    height: 150px;
     width: 300px;
-    border-radius: 30px;
+    margin: 20px;
+    border-radius: 40px;
     border: 0px;
     background: white;
-    font-size: 10em;
+    font-size: 3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transform: scale(1);
     transition: 0.2s ease;
 }
 
 #toggle:hover {
-    transform: scale(1.5);
+    transform: scale(1.1);
     transition: 0.5s ease;
 }
 
 #toggle:active {
-    transform: scale(1.7);
+    transform: scale(1.15);
     transition: 0.1s ease;
 }
