--- a/src/style.scss
+++ b/src/style.scss
@@ -47,6 +47,7 @@ body {
     font-size: 1.5em;
     transition: 0.2s ease;
     color: white;
+    cursor: pointer;
 }
 
 #display {
@@ -63,7 +64,6 @@ body {
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
-    padding: 10px 30px;
 }
 
 #photo {
@@ -97,12 +97,19 @@ nav {
     display: flex;
     align-content: center;
     justify-content: center;
-    padding: 20px 0;
+    padding: 1.5rem 0;
     font-weight: bolder;
-    background-color: $maincolor;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     font-size: 1.25em;
+}
+
+#title {
+    color: $maincolor;
+}
+
+#title-alt {
+    color: white;
 }
 
 #card-container {
@@ -111,6 +118,7 @@ nav {
 }
 
 .card {
+    background-color: transparent;
     top: 0;
     right: 0;
     left: 0;
@@ -118,8 +126,35 @@ nav {
     position: absolute;
     width: 500px;
     height: 300px;
-    background: white;
+    transition: transform 0.2s ease;
+    perspective: 1000px;
+    cursor: pointer;
+}
+
+.card.front,
+.card.back {
+    backface-visibility: hidden;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    transition: transform 0.2s ease;
+}
+
+.card.front {
+    background: white;
+}
+
+.card.back {
+    transform: rotateY(-180deg);
+    background-color: $maincolor;
+    color: white;
+}
+
+#details {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+
+#details > span {
+    margin: 10px 20px;
 }
