modified colors + fixed classes

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,13 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:500);
-@import url(https://fonts.googleapis.com/css2?family=Eczar:wght@500&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Eczar);
 // SASS variables
-$maincolor: rgb(255, 89, 89);
-$accentcolor: blue;
+$maincolor: #412234;
+$background: #bdd9bf;
+$accentcolor: #ffc857;
+$white: #f7f7f7;
+$black: #2e4052;
 
 body {
     margin: 0;
     /* background: linear-gradient(180deg, #d309e1 0%, rgb(156, 26, 255) 100%); */
-    background: #ffecd9;
+    background: $background;
     font-family: Raleway, sans-serif;
     overflow-x: hidden;
 }
@@ -38,19 +41,19 @@ body {
     background-size: 500%;
     font-size: 1.5em;
     transition: 0.2s ease;
-    color: white;
+    color: $white;
     cursor: pointer;
 }
 
 #display {
     width: 22vw;
     height: 80vh;
-    background: white;
+    background: $white;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
-#profile {
+.profile {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -58,13 +61,13 @@ body {
     justify-content: center;
 }
 
-#photo {
+.photo {
     display: flex;
     align-content: center;
     justify-content: center;
 }
 
-#avatar {
+.avatar {
     border-radius: 50%;
     background-size: cover;
     margin: 0 0 10px 0;
@@ -72,7 +75,7 @@ body {
     width: 128px;
 }
 
-#name {
+.name {
     color: $maincolor;
     margin: 5px 0;
     text-align: center;
@@ -80,7 +83,7 @@ body {
     font-weight: bold;
 }
 
-#email {
+.email {
     text-align: center;
 }
 
@@ -96,12 +99,12 @@ nav {
     font-size: 1.25em;
 }
 
-#title {
+.title {
     color: $maincolor;
 }
 
-#title-alt {
-    color: white;
+.title-alt {
+    color: $white;
 }
 
 #card-container {
@@ -131,33 +134,48 @@ nav {
 }
 
 .card.front {
-    background: white;
+    background: $white;
 }
 
 .card.back {
     transform: rotateY(-180deg);
     background-color: $maincolor;
-    color: white;
+    color: $white;
 }
 
-#details {
+.details {
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
 }
 
-#details > span {
+.details > span {
     margin: 10px 20px;
 }
 
 #tooltip {
     margin-top: 6em;
+    color: $black;
+    font-family: "Eczar";
+    text-align: center;
 }
 
 h1 {
+    color: $black;
+    font-weight: 900;
     font-family: "Eczar";
     text-align: center;
     font-size: 5em;
-    margin-bottom: 0;
+    margin: 0;
+}
+
+.decorated {
+    text-decoration: underline;
+    text-decoration-color: $accentcolor;
+    text-decoration-style: dotted;
+    text-underline-offset: 0.3em;
+    text-decoration-thickness: 0.2em;
+    font-weight: bolder;
+    cursor: pointer;
 }
